<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/backgroundSetting"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view_with_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popup_window_background_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/anti_flash"
            android:minHeight="200dp">

            <ImageView
                android:id="@+id/blue2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/_4"
                app:layout_constraintBottom_toBottomOf="@+id/red2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/red2"
                app:srcCompat="@drawable/blue5" />

            <ImageView
                android:id="@+id/blue"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvselectDice"
                app:srcCompat="@drawable/blue5" />

            <ImageView
                android:id="@+id/sounds"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/sound" />

            <TextView
                android:id="@+id/tvselectDice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/select_your_dice"
                android:textSize="20sp"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPlayer1" />

            <ImageView
                android:id="@+id/green"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/_1"
                app:layout_constraintStart_toEndOf="@+id/white"
                app:layout_constraintTop_toBottomOf="@+id/tvselectDice"
                app:srcCompat="@drawable/green5" />

            <ImageView
                android:id="@+id/green2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/_1"
                app:layout_constraintStart_toEndOf="@+id/white2"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/green5" />

            <ImageView
                android:id="@+id/pink"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/_2"
                app:layout_constraintStart_toEndOf="@+id/green"
                app:layout_constraintTop_toBottomOf="@+id/tvselectDice"
                app:srcCompat="@drawable/pink5" />

            <ImageView
                android:id="@+id/pink2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/_2"
                app:layout_constraintStart_toEndOf="@+id/green2"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/pink5" />

            <ImageView
                android:id="@+id/red"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/_3"
                app:layout_constraintEnd_toStartOf="@+id/blue"
                app:layout_constraintStart_toEndOf="@+id/pink"
                app:layout_constraintTop_toBottomOf="@+id/tvselectDice"
                app:srcCompat="@drawable/red5" />

            <ImageView
                android:id="@+id/red2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/_3"
                app:layout_constraintEnd_toStartOf="@+id/blue2"
                app:layout_constraintStart_toEndOf="@+id/pink2"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/red5" />

            <ImageView
                android:id="@+id/white"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/_0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvselectDice"
                app:srcCompat="@drawable/white5"/>

            <ImageView
                android:id="@+id/white2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/_0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/white5" />

            <EditText
                android:id="@+id/tvPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/select_player2_dice"
                android:textSize="20sp"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/sounds"
                android:textSize="20sp"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/white2" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/quit"
                android:textColor="@color/anti_flash"
                android:backgroundTint="@color/backgroundMenu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sounds" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/tvPlayer1"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>